[package]
name = "fcu"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
colored = "2.0.4"
folder = "0.5.0"
futures = "0.3.29"
itertools = "0.12.0"
lazy_static = "1.4.0"
logos = "0.13.0"
pathdiff = "0.2.1"
pretty-bytes = "0.2.2"
rand = "0.8.5"
rayon = "1.8.0"
reqwest = { version = "0.11.22", features = ["blocking", "socks"] }
tokio = { version = "1.34.0", features = ["full"] }
